--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^1.10.3",
     "express": "^4.12.2",
     "kraken-js": "^2.0.0",
+    "mongoose": "^5.9.10",
     "requirejs": "^2.3.6"
   },
   "devDependencies": {
