--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "construx": "^1.0.0",
     "construx-copier": "^1.0.0",
-    "eslint": "^1.10.3",
+    "cors": "^2.8.5",
+    "eslint": "^1.10.3*",
     "express": "^4.12.2",
     "kraken-js": "^2.0.0",
     "mongoose": "^5.9.10",
