reestruturação do projeto e ajuste de pastas

--- a/airport-api/package.json
+++ b/airport-api/package.json
@@ -16,7 +16,7 @@
     "construx": "^1.0.0",
     "construx-copier": "^1.0.0",
     "cors": "^2.8.5",
-    "eslint": "^1.10.3*",
+    "eslint": "^6.6.0",
     "express": "^4.12.2",
     "kraken-js": "^2.0.0",
     "mongoose": "^5.9.10",
