--- a/airport-ui/package.json
+++ b/airport-ui/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "airpots-ui",
+  "name": "airport-ui",
+  "author": "Nayara Ferreira",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
+    "axios": "^0.19.2",
+    "material-design-icons": "^3.0.1",
+    "react": "^16.13.1",    
     "react-dom": "^16.13.1",
-    "react-hook-form": "^5.6.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -31,5 +34,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:nfers/aeroportos.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nfers/aeroportos/issues"
+  },
+  "homepage": "https://github.com/nfers/aeroportos"
 }
