--- a/airport-ui/package.json
+++ b/airport-ui/package.json
@@ -9,10 +9,10 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "material-design-icons": "^3.0.1",
-    "react": "^16.13.1",    
+    "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
