--- a/airport-ui/package.json
+++ b/airport-ui/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -42,6 +43,5 @@
   },
   "bugs": {
     "url": "https://github.com/nfers/aeroportos/issues"
-  },
-  "homepage": "https://github.com/nfers/aeroportos"
+  }
 }
